# api/swagger.yml
@@ -3,9 +3,6 @@ info:
   description: "Youtube API"
   version: "1.0.0"
   title: "Youtube API"
-  license:
-    name: "Apache 2.0"
-    url: "http://www.apache.org/licenses/LICENSE-2.0.html"
   contact:
     email: "ridwan.rais2@gmail.com"
 # host: "virtserver.swaggerhub.com"
@@ -14,6 +11,8 @@ securityDefinitions:
     type: apiKey
     in: header
     name: Authorization
+consumes:
+  - "application/json"
 
 security:
   - Bearer: []
@@ -37,6 +36,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -72,6 +74,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -105,6 +110,8 @@ paths:
         "200":
           description: "Success"
           headers:
+            Access-Control-Allow-Origin:
+              type: "string"
             Set-Cookie:
               type: string
               # example: JSESSIONID=abcde12345; Path=/; HttpOnly
@@ -145,6 +152,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -177,6 +187,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -210,6 +223,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -244,6 +260,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -274,6 +293,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -305,6 +327,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -338,6 +363,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -372,6 +400,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -406,6 +437,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -443,6 +477,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -475,6 +512,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -508,6 +548,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -534,6 +577,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -562,6 +608,12 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            # Access-Control-Allow-Headers:
+            #   type: string
+            #   default: "Content-Type, api_key, Authorization"
           schema:
             type: object
             properties:
@@ -589,6 +641,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -623,6 +678,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -657,6 +715,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -691,6 +752,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -723,6 +787,9 @@ paths:
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -753,10 +820,13 @@ paths:
           name: videoID
           type: "string"
           description: "The id of video"
-      security: []      
+      security: []
       responses:
         "200":
           description: "Success"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
           schema:
             type: object
             properties:
@@ -765,7 +835,7 @@ paths:
                 description: "comments gotten successfully"
               comments:
                 type: array
-                items: 
+                items:
                   $ref: "#/definitions/Comment"
         "400":
           $ref: "#/responses/BadRequest"
@@ -773,8 +843,6 @@ paths:
           $ref: "#/responses/BadRequest"
         "404":
           $ref: "#/responses/NotFound"
-
-
 
 definitions:
   Health:
@@ -923,16 +991,6 @@ definitions:
           type: string
   Video:
     type: object
-    required:
-      - userID
-      - title
-      - description
-      - imgUrl
-      - videoUrl
-      - views
-      - tags
-      - likes
-      - dislikes
     properties:
       ID:
         type: string
